--- a/Exercise2/css/product-categories.css
+++ b/Exercise2/css/product-categories.css
@@ -86,7 +86,21 @@ body {
     display: inline-block;
 }
 
+.popular-products {
 
+    text-align: center;
+    border: 2px solid #6ab1d4;
+    box-shadow: 0px 2px 16px #6ab1d4;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    margin-left: 150px;
+    margin-right: 150px;
+}
+
+.product-card {
+
+    display: inline-block;
+}
 
 .image {
 
