--- a/Exercise2/css/contact.css
+++ b/Exercise2/css/contact.css
@@ -1,60 +1,209 @@
 .header-light-color {
-    background-color: #5680e9;
-    /* background χρωμα header και περιεχομενων του, margins ωστε αριστερα δεξια να ειναι μπλε και πανω ωστε να ειναι μπλε και πιο ψηλα το λογοτυπο επισης */
+    background-color: #5680e9; /* background χρωμα header και περιεχομενων του, margins ωστε αριστερα δεξια να ειναι μπλε και πανω ωστε να ειναι μπλε και πιο ψηλα το λογοτυπο επισης */
     text-align: center;
     margin-top: -50px;
     margin-left: -10px;
     margin-right: -10px;
+    
 }
 
 .navigation {
 
-    font-family: Arial, Helvetica, sans-serif;
-    /* font για nav οπως και display block αντι για inline padding ωστε να , background color για να εχει αντιθεση με το Png λογοτυπο και line height για να ειναι λιγο πιο κατω απο το λογοτυπο. το sticky ειναι για να μενει το μενου στην σελιδα μεσα οταν κανεις scroll down  */
+    font-family: Arial, Helvetica, sans-serif; /* font για nav οπως και display block αντι για inline padding ωστε να , background color για να εχει αντιθεση με το Png λογοτυπο και line height για να ειναι λιγο πιο κατω απο το λογοτυπο. το sticky ειναι για να μενει το μενου στην σελιδα μεσα οταν κανεις scroll down  */
     display: block;
     padding: 8px;
     background-color: #84ceeb;
     float: none;
     line-height: 33px;
-    position: sticky;
-    top: 0;
-    width: 100%;
-
+    
+     
 }
 
 .navigation a {
-
-    color: black;
-    /* χρωμα για κομπια nav font size αλλα και padding ωστε να ειναι ομοιομορφα και μοιρασμενα ωραια μεσα στην σελιδα με κενα μεταξυ τους */
-    font-size: 20px;
+    
+    color: black; /* χρωμα για κομπια nav font size αλλα και padding ωστε να ειναι ομοιομορφα και μοιρασμενα ωραια μεσα στην σελιδα με κενα μεταξυ τους */
+    font-size: 18px;
     text-decoration: none;
-    padding: 14px 16px;
+    padding: 14px 12px;
     font-weight: bold;
-
-
+    
+    
+    
 }
 
 .navigation a:visited {
 
-    text-decoration: none;
-    /* οταν το εχεις επισκεφθει το λινκ δεν γινεται τιποτα */
+    text-decoration: none; /* οταν το εχεις επισκεφθει το λινκ δεν γινεται τιποτα */
 }
 
 .navigation a:hover {
 
-    background-color: #2ea8d9;
-    /* οταν κανεις hover γινεται πιο σκουρο το τετραγωνο κουμπι nav */
-
+    background-color: #2ea8d9; /* οταν κανεις hover γινεται πιο σκουρο το τετραγωνο κουμπι nav */
+    
 }
 
 .navigation a:active {
 
-    color: grey;
-    /* οταν πατας το λινκ θα γινεται στιγμιαια γκρι */
+    color: grey; /* οταν πατας το λινκ θα γινεται στιγμιαια γκρι */
 }
 
 
 .navigation .active {
+    background-color: #2ea8d9; /* το χρωμα του τωρινου nav button */
+}
+
+body {
+
+   background-color: #badff1; /* χρωμα φοντου και σχημα και font */
+   font-family: Arial, Helvetica, sans-serif;
+   font-size: 18px;
+   overflow-y: scroll;
+   overflow-x: hidden;
+   text-align: center;
+}
+
+.main-content > h3 {
+
+    
+   text-decoration: underline;
+   
+}
+
+
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+
+input[type=email], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=number], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+
+input[type=tel], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=date], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=file], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    box-sizing: border-box;
+    
+}
+
+
+input[type=submit] {
+    width: 100%;
     background-color: #2ea8d9;
-    /* το χρωμα του τωρινου nav button */
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+input[type=submit]:hover {
+
+    background-color: #119cd4;
+}
+
+
+.forma-yposthrikshs {
+
+   
+    padding: 40px;
+    width: 50%;
+    text-align: left;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+textarea {
+    width: 100%;
+    height: 100px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
+}
+
+.forma {
+
+    display: block;
+    text-align: center;
+}
+
+
+.footer-content {
+
+    background-color: #5680e9;  
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: -10px;
+    margin-left: -10px;
+    margin-right: -10px;
+    box-shadow: 0px -5px 16px #6ab1d4;
+    border-bottom: 15px solid black;
+}
+
+.footer-content > h4:first-child{
+
+    font-size: 20px;
+    padding-top: 5px;
+    
+}
+
+.footer-content > a > img {
+
+    filter: grayscale(100%);
+    border-radius: 25px;
+}
+
+.footer-content > a > img:hover{
+
+    filter: grayscale(0%);
 }
