--- a/Exercise2/css/product-categories.css
+++ b/Exercise2/css/product-categories.css
@@ -67,34 +67,62 @@ body {
     font-size: 18px;
     overflow-y: scroll;
     overflow-x: hidden;
+    text-align: center;
 }
+
 
 .subcategory {
 
-    text-align: center;
+   
     border: 2px solid #6ab1d4;
     box-shadow: 0px 2px 16px #6ab1d4;
     margin-top: 20px;
     margin-bottom: 30px;
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-left: 270px;
+    margin-right: 270px;
    
 }
 
 .category-card {
 
     display: inline-block;
+
 }
+
+.category-name {
+
+    word-break: break-all;
+}
+
+a {
+
+    text-decoration: none;
+    color: black;
+
+}
+
+a:visited {
+
+    text-decoration: none;
+
+}
+
+a:active {
+
+    color: grey;
+
+}
+
 
 .popular-products {
 
-    text-align: center;
+    
     border: 2px solid #6ab1d4;
     box-shadow: 0px 2px 16px #6ab1d4;
     margin-top: 20px;
     margin-bottom: 30px;
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-left: 270px;
+    margin-right: 270px;
 }
 
 .product-card {
@@ -112,10 +140,12 @@ body {
 
 
 
+
+
 .footer-content {
 
     background-color: #5680e9;
-    text-align: center;
+    
     margin-top: 50px;
     margin-bottom: -10px;
     margin-left: -10px;
