--- a/Exercise2/css/about_us.css
+++ b/Exercise2/css/about_us.css
@@ -1,60 +1,45 @@
 .header-light-color {
-    background-color: #5680e9; /* background χρωμα header και περιεχομενων του, margins ωστε αριστερα δεξια να ειναι μπλε και πανω ωστε να ειναι μπλε και πιο ψηλα το λογοτυπο επισης */
+    background-color: #5680e9;
     text-align: center;
     margin-top: -50px;
     margin-left: -10px;
     margin-right: -10px;
-    
 }
 
 .navigation {
-
-    font-family: Arial, Helvetica, sans-serif; /* font για nav οπως και display block αντι για inline padding ωστε να , background color για να εχει αντιθεση με το Png λογοτυπο και line height για να ειναι λιγο πιο κατω απο το λογοτυπο. το sticky ειναι για να μενει το μενου στην σελιδα μεσα οταν κανεις scroll down  */
-    display: block;
+    font-family: Arial, Helvetica, sans-serif;
     padding: 8px;
     background-color: #84ceeb;
     float: none;
     line-height: 33px;
-    
-     
 }
 
 .navigation a {
-    
-    color: black; /* χρωμα για κομπια nav font size αλλα και padding ωστε να ειναι ομοιομορφα και μοιρασμενα ωραια μεσα στην σελιδα με κενα μεταξυ τους */
-    font-size: 18px;
+    color: black;
     text-decoration: none;
     padding: 14px 12px;
     font-weight: bold;
-    
-    
-    
 }
 
 .navigation a:visited {
-
-    text-decoration: none; /* οταν το εχεις επισκεφθει το λινκ δεν γινεται τιποτα */
+    text-decoration: none;
 }
 
 .navigation a:hover {
-
-    background-color: #2ea8d9; /* οταν κανεις hover γινεται πιο σκουρο το τετραγωνο κουμπι nav */
-    
+    background-color: #2ea8d9; 
 }
 
 .navigation a:active {
-
-    color: grey; /* οταν πατας το λινκ θα γινεται στιγμιαια γκρι */
+    color: grey; 
 }
 
 
 .navigation .active {
-    background-color: #2ea8d9; /* το χρωμα του τωρινου nav button */
+    background-color: #2ea8d9;
 }
 
 body {
-
-    background-color: #badff1; /* χρωμα φοντου και σχημα και font */
+    background-color: #badff1;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     overflow-y: scroll;
@@ -63,16 +48,10 @@ body {
 }
 
 .main-content > h2 {
-
     text-align: center;
-
 }
  
-
-
 .perilhpsh {
-
-    
     border: 4px solid #6ab1d4;
     box-shadow: 0px 2px 16px #6ab1d4;
     margin-top: 20px;
@@ -82,13 +61,11 @@ body {
 }
 
 .perilhpsh > p {
-
     padding-left: 20px;
     padding-right: 20px;
 }
 
 .synexeia-perilhpshs {
-
     border: 4px solid #6ab1d4;
     box-shadow: 0px 2px 16px #6ab1d4;
     margin-top: 20px;
@@ -101,11 +78,7 @@ body {
     padding-bottom: 20px;
 }
 
-
-
-
 .footer-content {
-
     background-color: #5680e9;  
     text-align: center;
     margin-top: 50px;
@@ -117,19 +90,15 @@ body {
 }
 
 .footer-content > h4:first-child{
-
     font-size: 20px;
     padding-top: 5px;
-    
 }
 
 .footer-content > a > img {
-
     filter: grayscale(100%);
     border-radius: 25px;
 }
 
 .footer-content > a > img:hover{
-
     filter: grayscale(0%);
 }
