--- a/Exercise2/css/product-iphone14-pro-max.css
+++ b/Exercise2/css/product-iphone14-pro-max.css
@@ -1,6 +1,5 @@
 .header-light-color {
     background-color: #5680e9;
-    /* background χρωμα header και περιεχομενων του, margins ωστε αριστερα δεξια να ειναι μπλε και πανω ωστε να ειναι μπλε και πιο ψηλα το λογοτυπο επισης */
     text-align: center;
     margin-top: -50px;
     margin-left: -10px;
@@ -8,9 +7,7 @@
 }
 
 .navigation {
-
     font-family: Arial, Helvetica, sans-serif;
-    /* font για nav οπως και display block αντι για inline padding ωστε να , background color για να εχει αντιθεση με το Png λογοτυπο και line height για να ειναι λιγο πιο κατω απο το λογοτυπο. το sticky ειναι για να μενει το μενου στην σελιδα μεσα οταν κανεις scroll down  */
     display: block;
     padding: 8px;
     background-color: #84ceeb;
@@ -19,51 +16,36 @@
     position: sticky;
     top: 0;
     width: 100%;
-
 }
 
 .navigation a {
-
     color: black;
-    /* χρωμα για κομπια nav font size αλλα και padding ωστε να ειναι ομοιομορφα και μοιρασμενα ωραια μεσα στην σελιδα με κενα μεταξυ τους */
     font-size: 20px;
     text-decoration: none;
     padding: 14px 16px;
     font-weight: bold;
-
-
 }
 
 .navigation a:visited {
-
     text-decoration: none;
-    /* οταν το εχεις επισκεφθει το λινκ δεν γινεται τιποτα */
 }
 
 .navigation a:hover {
-
     background-color: #2ea8d9;
-    /* οταν κανεις hover γινεται πιο σκουρο το τετραγωνο κουμπι nav */
-
 }
 
 .navigation a:active {
-
     color: grey;
-    /* οταν πατας το λινκ θα γινεται στιγμιαια γκρι */
 }
 
 
 .navigation .active {
     background-color: #2ea8d9;
-    /* το χρωμα του τωρινου nav button */
 }
 
 
 body {
-
     background-color: #badff1;
-    /* χρωμα φοντου και σχημα και font */
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     overflow-y: scroll;
@@ -72,25 +54,18 @@ body {
 }
 
 .main-content {
-
     padding-top: 30px;
     text-align: left;
-
 }
 
 
-.main-content > h3 > a {
-
+.main-content>h3>a {
     color: black;
     text-decoration: none;
-
 }
 
-.main-content > h4 {
-
-    
+.main-content>h4 {
     font-size: 15px;
-    
     margin-bottom: -47px;
     margin-right: 1153px;
     padding-bottom: 40px;
@@ -101,22 +76,17 @@ body {
     border-radius: 25px;
     border-top-style: solid;
     text-align: center;
-   
 }
 
 
 .display-photo {
-
     float: left;
     border: 3px hidden #2ea8d9;
     background-color: #6ab1d4;
     border-radius: 25px;
-    
-
 }
 
 .price {
-
     text-align: center;
     border: 5px hidden #2ea8d9;
     background-color: #6ab1d4;
@@ -128,13 +98,9 @@ body {
     margin-bottom: 200px;
     font-size: 25px;
     font-weight: bold;
-    
-
 }
 
 .product-descr {
-
-
     text-align: left;
     border: 3px solid #6ab1d4;
     box-shadow: 0px 2px 16px #6ab1d4;
@@ -143,153 +109,113 @@ body {
     margin-left: 370px;
     margin-right: 30px;
     padding-left: 10px;
-    
 }
 
 .outer-box {
-
     margin-top: -15px;
-    
 }
 
 .manifacturer {
-
     text-decoration: underline;
-
 }
 
-.perigrafh > h3 {
-
+.perigrafh>h3 {
     text-decoration: underline;
-
 }
 
-.xarakthristika > h3 {
-
+.xarakthristika>h3 {
     text-decoration: underline;
-
 }
 
 
 .comparison {
-
     display: block;
     margin: 0 auto;
     border: 4px solid #6ab1d4;
     box-shadow: 0px 0px 10px 5px #6ab1d4;
     margin-bottom: 30px;
-
 }
 
 
 .analytika-xarakthristika {
-
     display: block;
     border: 4px solid #6ab1d4;
     box-shadow: 0px 2px 16px #6ab1d4;
     margin-left: 130px;
     margin-right: 130px;
-
 }
 
-
 .row-title {
-
     text-align: center;
     text-decoration: underline;
     font-size: 22px;
     border-bottom: 4px solid #6ab1d4;
-    
 }
 
 .row {
-
     border-bottom: 2px solid #6ab1d4;
     padding-top: 20px;
-    
-
 }
 
-
 .label {
-
     font-weight: bold;
     padding-left: 100px;
-
 }
 
 .value {
-
     text-align: right;
     padding-right: 110px;
     margin-top: -20px;
     padding-bottom: 20px;
-
 }
 
-.value > a {
-
+.value>a {
     color: black;
     text-decoration: none;
-
 }
 
-.value > a:hover {
-
+.value>a:hover {
     text-decoration: underline;
-
 }
 
-.value > a:visited {
-
+.value>a:visited {
     text-decoration: none;
-
 }
 
-.value > a:active {
-
+.value>a:active {
     color: gray;
-
 }
 
 .forma {
-
     padding-top: 50px;
-
 }
 
 
-.forma > h3{
-
+.forma>h3 {
     text-align: center;
 }
 
-input, label {
+input,
+label {
     cursor: pointer;
 }
 
 input[type="radio"] {
     height: 20px;
     width: 20px;
-    
 }
 
 label {
-
     margin-right: 15px;
 }
 
 .epilogh {
-
     appearance: none;
     border: 4px solid #fff;
     background-color: #ccc;
     border-radius: 50%;
     outline: 1px solid #ccc;
-    
-
 }
-
 
 .epilogh:hover {
     outline-color: gray;
@@ -298,7 +224,6 @@ label {
 .epilogh:checked {
     outline-color: #5680e9;
     background-color: #5680e9;
-
     animation: outline-checked;
     animation-duration: 0.1s;
     animation-iteration-count: 4;
@@ -316,15 +241,12 @@ label {
     }
 }
 
-
-#sxolia-title{
-
+#sxolia-title {
     display: block;
     margin-top: 15px;
 }
 
 textarea {
-
     display: block;
     width: 595px;
     height: 50px;
@@ -336,10 +258,7 @@ textarea {
     resize: none;
     margin-top: 10px;
     margin-left: 450px;
-    
-   
 }
-
 
 input[type=submit] {
     width: 650px;
@@ -350,15 +269,13 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-  }
-  
-input[type=submit]:hover {
+}
 
+input[type=submit]:hover {
     background-color: #119cd4;
 }
 
 .footer-content {
-
     background-color: #5680e9;
     text-align: center;
     margin-top: 50px;
@@ -370,19 +287,15 @@ input[type=submit]:hover {
 }
 
 .footer-content>h4:first-child {
-
     font-size: 20px;
     padding-top: 5px;
-
 }
 
 .footer-content>a>img {
-
     filter: grayscale(100%);
     border-radius: 25px;
 }
 
 .footer-content>a>img:hover {
-
     filter: grayscale(0%);
 }
