--- a/Exercise3/css/omorfo.css
+++ b/Exercise3/css/omorfo.css
@@ -759,6 +759,17 @@ select {
 }
 
 
+#jimmy {
+
+    height: 250px;
+}
+
+
+#tasos {
+
+    height: 250px;
+}
+
 /* !!!!!!!!!!!!!!!!!! ΤΕΛΟΣ ABOUT US !!!!!!!!!!!!!!!! */
 
 
