--- a/Exercise2/css/omorfo.css
+++ b/Exercise2/css/omorfo.css
@@ -94,6 +94,13 @@ body {
     text-decoration: none;          /* για να μην φαινονται τα λινκ underline */ 
 }
 
+
+#slim {
+
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
 /* !!!!!!!!!!!!!!!!!!!!! ΤΕΛΟΣ INDEX !!!!!!!!!!!!!!!!!!! */
 
 
@@ -730,7 +737,7 @@ select {
 .perilhpsh {
     border: 4px solid #6ab1d4;
     box-shadow: 0px 2px 16px #6ab1d4;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-bottom: 30px;
     margin-left: 20px;
     margin-right: 20px;
@@ -762,6 +769,7 @@ select {
 #jimmy {
 
     height: 250px;
+    margin-top: -40px;
 }
 
 #tasos {
