--- a/Exercise3/css/omorfo.css
+++ b/Exercise3/css/omorfo.css
@@ -33,8 +33,8 @@
 
     display: grid;
     
-    grid-auto-rows: 5;
-    grid-auto-columns: 4;
+    grid-auto-rows: auto;
+    grid-auto-columns: auto;
 
 }
 
@@ -44,9 +44,9 @@
     grid-row: 1/2;
 }
 
-.main-item {
-
-    grid-column: 1/4;
+.main-item {                                /* εδω εχουμε φτιαξει με grid layout τα 3 σημεια καθε σελιδας ...header , main και footer */
+                                            /* δηλαδη το που ξεκιναει και τελειωνει το καθε απο τα 3 μερη */
+    grid-column: 1/4;   
     grid-row: 2/4;
 }
 
@@ -76,12 +76,16 @@
 
 .navigation {
     font-family: roboto;
-    /*display: block;*/
-    padding: 8px;
-    background-color: #84ceeb;          /* display block και padding ωστε να ειναι το καθε κουμπι ενα τετραγωνακι , line height για να ειναι λιγο πιο ψηλα και βαλαμε και Helvetica ως font */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #84ceeb;          /* display flex ωστε να ειναι το καθε κουμπι ενα τετραγωνακι, justify και align center ωστε να ειναι κεντρο ολα τα κουμπια του μενου , line height για να ειναι λιγο πιο ψηλα και βαλαμε και @font-face roboto ως font */
     float: none;
-    line-height: 33px;
+    line-height: 28px;
 }
+
+
 
 .navigation a {
     color: black;
@@ -137,6 +141,7 @@ body {
 }
 
 .section-promote {
+    
     font-family: roboto-regular;
     text-align: center;
     border: 2px solid #6ab1d4;              /* βαλαμε border γυρω απο το section αυτο , μαζι με σκια γυρω γυρω και παιξαμε με τα margin για να φαινεται ωραιο μικρο και κεντραρισμενο */
@@ -153,14 +158,28 @@ body {
     border-radius: 25px;
 }
 
-.product {
-    display: inline;                /* inline για να ειναι στην σειρα τα προϊοντα */
-}
+
 
 .product > a {
 
     text-decoration: none;          /* για να μην φαινονται τα λινκ underline */ 
 }
+
+
+.prod-photos {
+                                                /* ωστε οι φωτογραφιες των προιοντων να γινοναι με flex και direction row ωστε να ειναι απο αριστερα προς τα δεξια */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+#slim {
+
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+
 
 /* !!!!!!!!!!!!!!!!!!!!! ΤΕΛΟΣ INDEX !!!!!!!!!!!!!!!!!!! */
 
@@ -177,8 +196,22 @@ body {
     margin-right: 270px;
 }
 
+.subcategory > ul {
+
+    display: flex;                          /* flex για τα αντικειμενα στο categories , wrap ωστε να πηγαινουν απο κατω μολις "τελειωνει" ο χωρος απο αριστερα προς τα δεξια */ 
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-top: 15px;
+    padding-right: 50px;
+}
+
+.subcategory > ul > li {
+                                        /* αυτο ειναι ωστε να χωριζεται σε 3 αντικειμενα το καθε row και μετα λογω του wrap να πηγαινουν κατω αριστερα */
+    flex: 0 0 33.333333%;
+}
+
 .category-card {
-    display: inline-block;              /* inline-block για να ειναι στην σειρα τα προϊοντα */
+   list-style-type: none;             /* βγαλαμε τα bullet απο τα li της ul */
 }
 
 
@@ -211,8 +244,23 @@ a:active {
     margin-right: 270px;
 }
 
+.popular-products > ul {
+
+    display: flex;                          /* flex για τα αντικειμενα στο categories , wrap ωστε να πηγαινουν απο κατω μολις "τελειωνει" ο χωρος απο αριστερα προς τα δεξια */ 
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-top: 15px;
+    padding-right: 50px;
+
+}
+
+.popular-products > ul > li {
+                                        /* αυτο ειναι ωστε να χωριζεται σε 3 αντικειμενα το καθε row και μετα λογω του wrap να πηγαινουν κατω αριστερα */
+    flex: 0 0 33.333333%;
+}
+
 .product-card {
-    display: inline-block;       /* inline για να ειναι στην σειρα τα προϊοντα */
+    list-style-type: none;          /* βγαλαμε τα bullet απο τα li της ul */
 }
 
 
@@ -227,10 +275,14 @@ a:active {
 .products {
 
     font-family: roboto;    /* ενιαιο font */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    
 }
 
 .products .product-card {
-    display: block;
+    
     box-shadow: 0 15px 30px 1px grey;           /* σκια γυρω γυρω και margin ωστε να φαινεται ωραιο */
     background: rgba(255, 255, 255, 0.90);
     text-align: center;
@@ -469,7 +521,7 @@ a:active {
     padding-left: 10px;
 }
 
-.outer-box {
+.outer-box {    
     margin-top: -15px;
 }
 
@@ -487,7 +539,9 @@ a:active {
 
 
 .comparison {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
     border: 4px solid #6ab1d4;
     box-shadow: 0px 0px 10px 5px #6ab1d4;
@@ -496,7 +550,8 @@ a:active {
 
 
 .analytika-xarakthristika {
-    display: block;
+    display: flex;
+    flex-direction: column;
     border: 4px solid #6ab1d4;
     box-shadow: 0px 2px 16px #6ab1d4;
     margin-left: 130px;
@@ -602,7 +657,8 @@ label {
 }
 
 #sxolia-title {
-    display: block;
+    display: flex;
+    justify-content: center;
     margin-top: 15px;
 }
 
@@ -647,6 +703,14 @@ input[type=submit]:hover {
 
 /* !!!!!!!!!!!!!!!!!! STORES !!!!!!!!!!!!!!!!!!!! */
 
+.katasthmata {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    
+}
+
 .katasthma {
     border: 3px solid #6ab1d4;
     box-shadow: 0px 2px 16px #6ab1d4;
@@ -660,19 +724,19 @@ input[type=submit]:hover {
 .katasthma>h3 {
     text-decoration: underline;
     padding-left: 15px;
-    margin-top: -1px;
+    margin-top: 5px;
     text-align: left;
 }
 
 .katasthma>p {
     font-weight: bold;
-    padding-left: 50px;
     padding-top: 70px;
 }
 
 .katasthma>p>img {
     float: right;
-    margin-top: -120px;
+    margin-top: -150px;
+
 }
 
 
@@ -773,7 +837,8 @@ select {
     padding: 40px;
     width: 50%;
     text-align: left;
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
     margin-left: auto;
     margin-right: auto;
 }
@@ -790,7 +855,6 @@ select {
 }
 
 .forma {
-    display: block;
     text-align: center;
 }
 
@@ -807,9 +871,8 @@ select {
 .perilhpsh {
     border: 4px solid #6ab1d4;
     box-shadow: 0px 2px 16px #6ab1d4;
-    margin-top: 20px;
     margin-bottom: 30px;
-    margin-left: 20px;
+    margin-left: 20px;  
     margin-right: 20px;
     text-align: left;
 }
@@ -841,6 +904,7 @@ select {
 #jimmy {
 
     height: 250px;
+    margin-top: -40px;
 }
 
 
@@ -858,6 +922,7 @@ select {
 
 
 .footer-content {
+   
     font-family: roboto-light;
     background-color: #5680e9;      
     text-align: center;
@@ -876,7 +941,7 @@ select {
 }
 
 .footer-content > a {
-
+    
     text-decoration: none;
 }
 
