--- a/Exercise4/css/style.css
+++ b/Exercise4/css/style.css
@@ -222,13 +222,10 @@ body {
     margin-bottom: 30px;
     margin-left: 270px;
     margin-right: 270px;
-    /*font-size: 1.2vw;*/
+   
 }
 
-.subcategory > h2 {
 
-    font-size: 1.7vw;
-}
 
 .subcategory > ul {
 
@@ -238,34 +235,25 @@ body {
     padding-top: 15px;
     padding-right: 50px;
     
+    
    
 }
 
 .subcategory > ul > li {
                                         /* αυτο ειναι ωστε να χωριζεται σε 3 αντικειμενα το καθε row και μετα λογω του wrap να πηγαινουν κατω αριστερα */
     flex: 0 0 33.333333%;
-   
+    
 }
 
 
 
-.subcategory > ul > li > a > img {
 
-   max-width: 100%;
-   width: fit-content;
-   height: fit-content;
 
-}
-
-.subcategory > ul > li > a > h3 {
-
-    font-size: 1.6vw;
-}
 
 .category-card {
    list-style-type: none;             /* βγαλαμε τα bullet απο τα li της ul */
-   width: fit-content;
-   height: fit-content;
+
+
 }
 
 
@@ -556,21 +544,29 @@ a:active {
 
     padding-top: 30px;
 }
+
+
 #iphone-code {
-    font-size: 15px;
-    margin-bottom: -47px;
-    margin-right: 1153px;
-    padding-bottom: 40px;
-    padding-left: 10px;
-    padding-top: 5px;
-    border: 5px hidden #2ea8d9;
+    border: 3px hidden #2ea8d9;
     background-color: #6ab1d4;
     border-radius: 25px;
-    border-top-style: solid;
-    text-align: center;
+    
 }
 
 
+#iphone-price {
+    border: 3px hidden #2ea8d9;
+    background-color: #6ab1d4;
+    border-radius: 25px;
+}
+
+
+.iphone-code-price{
+
+    display: block;
+    float: left;
+    max-width: 100%;
+}
 
 .display-photo {
     float: left;
@@ -579,26 +575,14 @@ a:active {
     border-radius: 25px;
 }
 
-#iphone {
-    text-align: center;
-    border: 5px hidden #2ea8d9;
-    background-color: #6ab1d4;
-    border-radius: 25px;
-    border-bottom-style: solid;
-    padding-top: 20px;
-    margin-right: 1153px;
-    margin-top: -230px;
-    margin-bottom: 200px;
-    font-size: 25px;
-    font-weight: bold;
-}
+
 
 .product-descr {
     font-family: roboto-regular;
     text-align: left;
     border: 3px solid #6ab1d4;
     box-shadow: 0px 2px 16px #6ab1d4;
-    margin-top: -100px;
+    
     margin-bottom: 30px;
     margin-left: 370px;
     margin-right: 30px;
@@ -630,6 +614,8 @@ a:active {
     border: 4px solid #6ab1d4;
     box-shadow: 0px 0px 10px 5px #6ab1d4;
     margin-bottom: 30px;
+    max-width: 100%;
+    height: auto;
 }
 
 
@@ -638,8 +624,13 @@ a:active {
     flex-direction: column;
     border: 4px solid #6ab1d4;
     box-shadow: 0px 2px 16px #6ab1d4;
+    max-width: 90%;
+    height: auto;
     margin-left: 130px;
     margin-right: 130px;
+    margin: 0 auto;
+    font-size: 1.4vw;
+    
 }
 
 .row-title {
@@ -657,15 +648,16 @@ a:active {
 .label {
     text-align: left;
     font-weight: bold;
-    padding-left: 100px;
+    padding-left: 10px;
 }
 
 .value {
     font-family: roboto-regular;
     text-align: right;
-    padding-right: 110px;
+    padding-right: 10px;
     margin-top: -20px;
     padding-bottom: 20px;
+   
 }
 
 .value>a {
@@ -747,17 +739,15 @@ label {
 }
 
 .vathmologia-asteria textarea {
-    display: block;
-    width: 595px;
-    height: 50px;
+    width: 40%;
+    height: 80px;
     padding: 12px 20px;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
     background-color: #f8f8f8;
     resize: none;
-    margin-top: 10px;
-    margin-left: 450px;
+   
 }
 
 .vathmologia-asteria {
@@ -766,11 +756,11 @@ label {
 }
 
 input[type=submit] {
-    width: 650px;
+    width: 45%;
     background-color: #2ea8d9;
     color: white;
-    padding: 12px 20px;
-    margin-left: -22px;
+    padding: 14px 20px;
+    margin: 8px 0;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -791,9 +781,17 @@ input[type=submit]:hover {
 
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    max-width: 150rem;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
     
+}
+
+iframe{
+
+    width: 70%;
+    height: 500px;
 }
 
 .katasthma {
